# SaiSamridh

./: ArrayExamples.java.txt  BinomialDistribution.java.txt  Birthdays.java.txt  DiscreteDistribution.java.txt  Hadamard.java.txt  HowMany.java.txt  HugeArray.java.txt  InversePermutation.java.txt  MagicSquare.java.txt  RandomWalkers.java.txt  Transpose.java.txt  ZipBarCoder.java.txt  daddy programc.docx  java_learn.java  java_learn.java.txt  python_gui_dev.py  python_learnings.py  test_python_learnings.py
C/: AIcourse_plot.py  CMakeLists.txt  C_Learn.c  coverage.functions.html  coverage.html  coverage.math1.c.49ba9873fefa2c14e1ecc429c6febfce.html  coverage.test_math1.c.4884773bddfe76dccc386baafe5626f4.html  coverage.unity.c.691a4fc74c0b2a852099c2839739f9df.html  make.bat  math1.c  math1.h  math_test.cpp  py_functions.py  sai c programs.c  students.csv  students.txt  test.c  test_math1-math1.gcda  test_math1-math1.gcno  test_math1-test_math1.gcda  test_math1-test_math1.gcno  test_math1-unity.gcda  test_math1-unity.gcno  test_math1.c  test_math1.c.gcov
C/AI_Test_Setup/: CMakeLists.txt  coverage.functions.html  coverage.html  coverage.test_math1.c.4884773bddfe76dccc386baafe5626f4.html  coverage.unity.c.691a4fc74c0b2a852099c2839739f9df.html  make.bat  math1.h  py_functions.py
C/AI_Test_Setup/CoverageReport-2025-09-07-20h40m14s/: index.html
C/C_Sai/: chess_move.c
C/CoverageReport-2025-09-07-21h08m15s/: index.html
C/CoverageReport-2025-09-07-21h09m09s/: index.html
C/chatbot/: app.py  app_web_based.py
C/py_calc/: coverage.math1.c.49ba9873fefa2c14e1ecc429c6febfce.html  docker.txt  git_cmds.txt  make.bat  make.bat.txt  math1.c  math1.c.gcov  math_test.cpp  py_functions.py  test_math1.c
python/: ProblemSet3.py  Task_List.csv  copy_file_worked.py  count_words.py  extracted_data.csv  lwc.py  phones.csv  py_linear_reg.py  py_try.py  pytest.ini  python_assign.py  python_learnings.py  python_learnings2.py  python_learnings3.py  python_numpy_learnings.py  python_tensorflow_learnings.py  sales_data.csv.txt  sum_numbers.py  test_python_learnings2.py
